<resources>
    <string name="app_name">matikkapeli_laaja</string>
    <string name="blank"></string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="start_header">Math Game</string>
    <string name="start_choose_game">What kind of exercises you want to train?</string>
    <string name="addition">Addition</string>
    <string name="deduction">Deduction</string>
    <string name="play_again">Play again</string>
    <string name="summary_text">You gained %1$d points and time was %2$s.</string>
    <string name="gameRounds">Round %1$d/%2$d</string>
    <string name="gamePoints">Points %1$d</string>
    <string name="gameTime">Time %1$s</string>
    <string name="gameQuestion">%1$d %2$s %3$d =</string>
    <string name="gameToast">Type answer</string>
    <string name="buttonAnswer">Answer</string>
    <string name="aboutAuthor">Author: Iina Soikkeli</string>
    <string name="aboutYear">2024</string>
    <string name="rulesText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum risus velit, gravida sed lacinia a, fringilla condimentum tellus. Suspendisse vel viverra lectus. Mauris quis est id dolor pellentesque accumsan ac ac odio. Curabitur luctus sit amet dolor eget efficitur. Ut elementum sagittis nisi, in ornare erat. In efficitur neque hendrerit efficitur cursus. Etiam sed efficitur tortor. Vestibulum maximus augue id metus convallis congue. Praesent vel faucibus massa, ac semper turpis.</string>
    <string name="summaryHeader">Game over</string>
</resources>